--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </ul>
             <ul class="copyright">
                <li>&copy;Reda SALIH. All rights reserved.</li>
-               <li>Digital Virgo</li>
+               <li>AdByLabs</li>
             </ul>
          </footer>
       </div>
